--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </main>
 
         <footer class="text-center mt-16 pt-8 border-t border-[#9AC3D3]">
-            <p class="text-[#36688D]">&copy; 2025 | Phân Tích Thực Hiện cho ASUS Việt Nam.</p>
+            <p class="text-[#36688D]">&copy; 2025 | Market Research by Châu Hoàng Bảo.</p>
         </footer>
 
     </div>
@@ -410,3 +410,4 @@
     </script>
 </body>
 </html>
+
