--- a/pn54/index.html
+++ b/pn54/index.html
@@ -169,7 +169,7 @@
                 ASUS ExpertCenter PN54 không phải là chiếc mini PC có hiệu năng thô cao nhất hay giá rẻ nhất, nhưng nó là một trong những lựa chọn toàn diện và đáng tin cậy nhất. Với sức mạnh từ CPU AMD mới, khả năng kết nối vượt trội và sự bảo chứng từ thương hiệu ASUS, PN54 là một lựa chọn tuyệt vời cho môi trường làm việc chuyên nghiệp, người dùng sáng tạo và những ai cần một cỗ máy nhỏ gọn nhưng mạnh mẽ và ổn định.
              </p>
              <div class="mt-8 text-sm text-gray-500">
-                <p>Infographic được tạo bởi Canvas Infographics.</p>
+                <p>Market Research thực hiện bởi Hoàng Bảo.</p>
              </div>
         </footer>
     </main>
