--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
                         <li class="flex items-start">
                             <div class="flex-shrink-0 bg-[#003F5C] text-white rounded-full h-8 w-8 flex items-center justify-center font-bold mr-4">1</div>
                             <div>
-                                <h4 class="font-semibold text-lg">Marketing Online B2B Chuyên Sâu</h4>
-                                <p class="text-[#36688D]">Tập trung triển khai các chiến dịch quảng cáo trực tuyến (Google Ads, LinkedIn) nhắm mục tiêu đến IT Managers và Chủ doanh nghiệp, sử dụng nội dung chuyên sâu để tạo ra **Lead chất lượng cao**.</p>
+                                <h4 class="font-semibold text-lg">Marketing Online B2C Chuyên Sâu</h4>
+                                <p class="text-[#36688D]">Cân nhắc triển khai các chiến dịch quảng cáo trực tuyến (Google Ads, LinkedIn) nhắm mục tiêu đến IT Managers và Chủ doanh nghiệp, sử dụng nội dung chuyên sâu để tạo ra Lead chất lượng cao.</p>
                             </div>
                         </li>
                         <li class="flex items-start">
                             <div class="flex-shrink-0 bg-[#003F5C] text-white rounded-full h-8 w-8 flex items-center justify-center font-bold mr-4">2</div>
                             <div>
                                 <h4 class="font-semibold text-lg">Khai Thác Kênh E-commerce & Bán Lẻ Trực Tuyến</h4>
-                                <p class="text-[#36688D]">Đẩy mạnh hiện diện và bán hàng trực tiếp (D2C) trên các sàn thương mại điện tử lớn (Tiki, Shopee) và các đại lý bán lẻ online, tận dụng các chương trình khuyến mãi **flash sale** và branding.</p>
+                                <p class="text-[#36688D]">Đẩy mạnh hiện diện và bán hàng trực tiếp (D2C) trên sàn thương mại điện tử lớn (Shopee) và website, tận dụng các chương trình khuyến mãi flash sale và branding.</p>
                             </div>
                         </li>
                          <li class="flex items-start">
                             <div class="flex-shrink-0 bg-[#003F5C] text-white rounded-full h-8 w-8 flex items-center justify-center font-bold mr-4">3</div>
                             <div>
                                 <h4 class="font-semibold text-lg">Truyền Thông Sáng Tạo & Case Study</h4>
-                                <p class="text-[#36688D]">Sản xuất nội dung (video, bài viết) nêu bật các case study thành công, so sánh trực quan lợi ích về không gian, điện năng và hiệu suất so với PC truyền thống.</p>
+                                <p class="text-[#36688D]">Sản xuất nội dung (video, bài viết) nêu bật các case study thành công, so sánh trực quan lợi ích về không gian, điện năng và hiệu suất so với PC truyền thống, kết hợp với Pr&Booking.</p>
                             </div>
                         </li>
                     </ol>
@@ -410,4 +410,5 @@
     </script>
 </body>
 </html>
+
 
